--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,3 +2,9 @@ compatibility_date = "2024-01-22"
 main = "src/worker.js"
 name = "wasp-sh-redirect"
 workers_dev = true
+
+[observability.logs]
+enabled = true
+
+[vars]
+REDIRECT_TO_DOMAIN = "https://wasp-lang.dev"
